--- a/content/reference/_index.Rmd
+++ b/content/reference/_index.Rmd
@@ -52,3 +52,10 @@ output:
 - [Sublime Text](http://sublimetext.com). Python-based text editor.
 - [Zotero](http://zotero.org), [Mendeley](http://mendeley.com), and [Papers](http://papersapp.com) are citation managers that incorporate PDF storage, annotation and other features. Zotero is free to use. Mendeley has a premium tier. Papers is a paid application after a trial period. I don't use these tools much, but that's not for any strong principled reason---mostly just intertia. If you use one and want to integrate with the material here, just make sure it can export to BibTeX/BibLaTeX files. Papers, which I've used most recently, can handily output citation keys in pandoc's format amongst several others.
 
+## Data
+
+- Census Data [National Historical Geographic Information System (NHGIS)](https://www.nhgis.org/)
+- NIH [Cancer Surveillance](https://seer.cancer.gov/)
+- Housing data [Zillow](https://www.zillow.com/howto/api/APIOverview.htm)
+- Los Angeles [city data](https://data.lacity.org/)
+- Los Angeles [crime data](http://www.lapdonline.org/crime_mapping_and_compstat)
